--- a/src/content/projects/qgiv.mdx
+++ b/src/content/projects/qgiv.mdx
@@ -31,8 +31,8 @@ As the Technical Lead on Qgiv's donation forms redesign project, I spearheaded t
 
 ### Links
 
-[https://www.qgiv.com/donation-forms](https://www.qgiv.com/donation-forms)  
-[https://www.qgiv.com/blog/qgivs-redesigned-donation-forms-win-big-innovation-award/](https://www.qgiv.com/blog/qgivs-redesigned-donation-forms-win-big-innovation-award/)
+[Qgiv.com](https://www.qgiv.com/donation-forms)  
+[Article - Qgiv wins BIG Innovation Award](https://www.qgiv.com/blog/qgivs-redesigned-donation-forms-win-big-innovation-award/)
 
 </Container>
 </div>
