--- a/src/content/projects/rodda-construction.mdx
+++ b/src/content/projects/rodda-construction.mdx
@@ -23,7 +23,7 @@ Squarespace, jQuery, ES6, LESS, webpack
 
 ### Summary
 
-Lowry Creative undertook the redesign of Rodda Construction's website to better showcase the company’s portfolio of building projects and provide a centralized feed for press releases and news articles. The project involved creating a custom design that avoided pre-built templates, ensuring a unique and tailored appearance.
+Lowry Creative undertook the redesign of Rodda Construction's website to better showcase the company's portfolio of building projects and provide a centralized feed for press releases and news articles. The project involved creating a custom design that avoided pre-built templates, ensuring a unique and tailored appearance.
 
 ### My Role
 
@@ -31,7 +31,7 @@ For the redesign of Rodda Construction's website, I utilized Squarespace's devel
 
 ### Links
 
-[https://www.roddaconstruction.com/](https://www.roddaconstruction.com/)
+[Live Project](https://www.roddaconstruction.com/)
 
 </Container>
 </div>
