--- a/src/content/projects/triptych.mdx
+++ b/src/content/projects/triptych.mdx
@@ -15,7 +15,7 @@ published: true
 
 ### Tech Stack
 
-Webflow, Typescript, React, Next.js, CSS, AWS S3, Github Actions
+Webflow, Typescript, React, Next.js, Three.js, GLSL, CSS, AWS S3, AWS Route 53, Github Actions
 
 </Container>
 </div>
@@ -27,12 +27,12 @@ Triptych recently completed a project to rebuild the company's website using a m
 
 ### My Role
 
-As the lead front-end engineer on this project, I was able to use a combination of Three.js, GLSL, React.js, and Webflow to deliver a final product that met the needs of all project stakeholders. By integrating Three.js and GLSL, I was able to create interactive 3D shaders and animations, bringing a dynamic, visually engaging experience to the site. React.js was used for building modular, reusable components, ensuring smooth interaction and performance. The challenge of deploying this setup on Webflow was met by leveraging custom code integrations, resulting in a unique, highly interactive web experience that maintained the flexibility of the Webflow CMS.
+As the lead front-end engineer on this project, I was able to use a combination of Three.js, GLSL, React, and Webflow to deliver a final product that met the needs of all project stakeholders. By integrating Three.js and GLSL, I was able to create interactive 3D shaders and animations, bringing a dynamic, visually engaging experience to the site. React.js was used for building modular, reusable components, ensuring smooth interaction and performance. The challenge of deploying this setup on Webflow was met by leveraging custom code integrations, resulting in a unique, highly interactive web experience that maintained the flexibility of the Webflow CMS.
 
 ### Links
 
-[https://www.triptych.co/](https://www.triptych.co/)  
-[https://muz.li/picked/triptych-engaging-interactive-experiences](https://muz.li/picked/triptych-engaging-interactive-experiences)
+[Live Project](https://www.triptych.co/)  
+[Article - Muz.li](https://muz.li/picked/triptych-engaging-interactive-experiences)
 
 </Container>
 </div>
