--- a/src/content/projects/lloyd-goldstein.mdx
+++ b/src/content/projects/lloyd-goldstein.mdx
@@ -9,7 +9,7 @@ published: true
 <div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
 <Container>
 
-# Project: Lloyd Goldstein
+# Lloyd Goldstein
 
 ---
 
@@ -31,7 +31,7 @@ As the sole front-end developer on this project, I leveraged Squarespace's Devel
 
 ### Links
 
-[https://www.lloydgoldstein.com/](https://www.lloydgoldstein.com/)
+[Live Project](https://www.lloydgoldstein.com/)
 
 </Container>
 </div>
