Fix dotfiles link

--- a/src/content/pages/extras/index.mdx
+++ b/src/content/pages/extras/index.mdx
@@ -13,7 +13,7 @@ published: true
 
 ### dotfiles
 
-As a tinkerer who loves hopping across operating systems, managing dotfiles was a nightmare. That all changed when I found [chezmoi](https://www.chezmoi.io/). Written in Go, chezmoi makes spinning up a new dev environment a breaze. Check out my [dotfiles on Github](https://github.com/mariomario/dotfiles) to see what I mean!
+As a tinkerer who loves hopping across operating systems, managing dotfiles was a nightmare. That all changed when I found [chezmoi](https://www.chezmoi.io/). Written in Go, chezmoi makes spinning up a new dev environment a breaze. Check out my [dotfiles on Github](https://github.com/thismarioperez/dotfiles) to see what I mean!
 
 ### $code_vibez
 
