--- a/src/content/pages/home/index.mdx
+++ b/src/content/pages/home/index.mdx
@@ -8,7 +8,7 @@ published: true
 <div className="relative flex flex-col size-full justify-center min-h-[calc(100vh-var(--header-height))]">
 <Container>
 
-# Hello there
+# Hello there 👋
 
 Thanks for dropping by!
 
