--- a/src/content/projects/fbi-safe-online-surfing.mdx
+++ b/src/content/projects/fbi-safe-online-surfing.mdx
@@ -27,7 +27,7 @@ The FBI-SOS (Safe Online Surfing) project is a free, web-based application desig
 
 ### My Role
 
-For this project I built a modular React component system that could be reused throughout the project for consistency and scalability. I implemented app-wide state management using Zustand to streamline data handling. Working closely with both development and design teams, I helped establish a smooth pipeline for integrating 3D assets into the projec's codebase. Additionally, I set up controls that allowed users to move an avatar around a 3D environment, enhancing interactivity and user engagement.
+For this project I built a modular React component system that could be reused throughout the project for consistency and scalability. I implemented app-wide state management using Zustand to streamline data handling. Working closely with both development and design teams, I helped establish a smooth pipeline for integrating 3D assets into the project's codebase. Additionally, I set up controls that allowed users to move an avatar around a 3D environment, enhancing interactivity and user engagement.
 
 ### Links
 
