--- a/src/content/projects/fbi-safe-online-surfing.mdx
+++ b/src/content/projects/fbi-safe-online-surfing.mdx
@@ -6,20 +6,16 @@ published: true
 ---
 
 <div className="flex flex-col w-full h-fit gap-y-16">
-<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
+<div className="flex flex-col w-full min-h-[calc(40vh-var(--header-height))] justify-center"></div>
 <Container>
 
 # FBI Safe Online Surfing
 
----
-
-#### Tech Stack
+</Container>
+<Container>
+### Tech Stack
 
 React, Next.js, Three.js, React Three Fiber, Zustand, Sass
-
-</Container>
-</div>
-<Container>
 
 ### Overview
 
