--- a/src/content/projects/meta-your-personal-main-street.mdx
+++ b/src/content/projects/meta-your-personal-main-street.mdx
@@ -6,20 +6,16 @@ published: true
 ---
 
 <div className="flex flex-col w-full h-fit gap-y-16">
-<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
+<div className="flex flex-col w-full min-h-[calc(40vh-var(--header-height))] justify-center"></div>
 <Container>
 
 # Meta: Your Personal Main Street
 
----
-
+</Container>
+<Container>
 ### Tech Stack
 
 Javascript, Vue.js, Three.js, Sass
-
-</Container>
-</div>
-<Container>
 
 ### Summary
 
