--- a/src/content/projects/robin-knows.mdx
+++ b/src/content/projects/robin-knows.mdx
@@ -6,20 +6,16 @@ published: true
 ---
 
 <div className="flex flex-col w-full h-fit gap-y-16">
-<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
+<div className="flex flex-col w-full min-h-[calc(40vh-var(--header-height))] justify-center"></div>
 <Container>
 
 # Robin Knows
 
----
-
+</Container>
+<Container>
 ### Tech Stack
 
 Typescript, React Native, Expo, Websockets, Tailwind/Nativewind, Nestjs, Eslint
-
-</Container>
-</div>
-<Container>
 
 ### Summary
 
