Revert "Update content layout"
This reverts commit 2d287b20af0deb1def0898a885451cb113c07ffe.

--- a/src/content/projects/triptych.mdx
+++ b/src/content/projects/triptych.mdx
@@ -6,16 +6,20 @@ published: true
 ---
 
 <div className="flex flex-col w-full h-fit gap-y-16">
-<div className="flex flex-col w-full min-h-[calc(40vh-var(--header-height))] justify-center"></div>
+<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
 <Container>
 
 # Triptych
 
-</Container>
-<Container>
+---
+
 ### Tech Stack
 
 Webflow, Typescript, React, Next.js, Three.js, GLSL, CSS, AWS S3, AWS Route 53, Github Actions
+
+</Container>
+</div>
+<Container>
 
 ### Summary
 
