--- a/src/content/projects/rodda-construction.mdx
+++ b/src/content/projects/rodda-construction.mdx
@@ -6,16 +6,20 @@ published: true
 ---
 
 <div className="flex flex-col w-full h-fit gap-y-16">
-<div className="flex flex-col w-full min-h-[calc(40vh-var(--header-height))] justify-center"></div>
+<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
 <Container>
 
 # Rodda Construction
 
-</Container>
-<Container>
+---
+
 ### Tech Stack
 
 Squarespace, jQuery, ES6, LESS, webpack
+
+</Container>
+</div>
+<Container>
 
 ### Summary
 
