--- a/src/content/projects/wind-river.mdx
+++ b/src/content/projects/wind-river.mdx
@@ -6,16 +6,20 @@ published: true
 ---
 
 <div className="flex flex-col w-full h-fit gap-y-16">
-<div className="flex flex-col w-full min-h-[calc(40vh-var(--header-height))] justify-center"></div>
+<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
 <Container>
 
 # Wind River
 
-</Container>
-<Container>
+---
+
 ### Tech Stack
 
 Webflow, React, React Three Fiber, PixiJS, Three.js, Sass, Vite, AWS S3, AWS Route 53, Github Actions
+
+</Container>
+</div>
+<Container>
 
 ### Summary
 
