Update project page layouts

--- a/src/content/projects/fbi-safe-online-surfing.mdx
+++ b/src/content/projects/fbi-safe-online-surfing.mdx
@@ -6,19 +6,18 @@ published: true
 ---
 
 <div className="flex flex-col w-full h-fit gap-y-16">
-<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
+<div className="flex flex-col w-full h-[calc(25vh-var(--header-height))] justify-end"></div>
 <Container>
 
 # FBI Safe Online Surfing
 
 ---
 
-#### Tech Stack
+### Tech Stack
 
 React, Next.js, Three.js, React Three Fiber, Zustand, Sass
 
 </Container>
-</div>
 <Container>
 
 ### Overview
