--- a/src/content/projects/qgiv.mdx
+++ b/src/content/projects/qgiv.mdx
@@ -6,7 +6,7 @@ published: true
 ---
 
 <div className="flex flex-col w-full h-fit gap-y-16">
-<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
+<div className="flex flex-col w-full h-[calc(25vh-var(--header-height))] justify-end"></div>
 <Container>
 
 # Qgiv
@@ -18,7 +18,6 @@ published: true
 React, Redux, webpack, Sass, PHP
 
 </Container>
-</div>
 <Container>
 
 ### Summary
