--- a/src/content/projects/wind-river.mdx
+++ b/src/content/projects/wind-river.mdx
@@ -6,7 +6,7 @@ published: true
 ---
 
 <div className="flex flex-col w-full h-fit gap-y-16">
-<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
+<div className="flex flex-col w-full h-[calc(25vh-var(--header-height))] justify-end"></div>
 <Container>
 
 # Wind River
@@ -18,7 +18,6 @@ published: true
 Webflow, React, React Three Fiber, PixiJS, Three.js, Sass, Vite, AWS S3, AWS Route 53, Github Actions
 
 </Container>
-</div>
 <Container>
 
 ### Summary
