Add links to content

--- a/src/content/projects/fbi-safe-online-surfing.mdx
+++ b/src/content/projects/fbi-safe-online-surfing.mdx
@@ -22,7 +22,7 @@ React, Next.js, Three.js, React Three Fiber, Zustand, Sass
 
 ### Overview
 
-The FBI-SOS (Safe Online Surfing) project is a free, web-based application designed to teach students in grades 3-8 about online safety. Triptych played a key role in bringing the project to life by designing and developing the program's interactive modules and quizzes, ensuring a seamless and engaging user experience. Through their efforts, the program effectively educates children on how to navigate the internet responsibly, avoid cyber threats, and recognize suspicious online behavior, fostering a safer digital environment for young users.
+The FBI-SOS (Safe Online Surfing) project is a free, web-based application designed to teach students in grades 3-8 about online safety. [Triptych](https://triptych.co) played a key role in bringing the project to life by designing and developing the program's interactive modules and quizzes, ensuring a seamless and engaging user experience. Through their efforts, the program effectively educates children on how to navigate the internet responsibly, avoid cyber threats, and recognize suspicious online behavior, fostering a safer digital environment for young users.
 
 ### My Role
 
