--- a/src/content/projects/lloyd-goldstein.mdx
+++ b/src/content/projects/lloyd-goldstein.mdx
@@ -22,7 +22,7 @@ Squarespace, jQuery, ES6, LESS, webpack
 
 ### Summary
 
-Lowry Creative designed and developed a website for Lloyd Goldstein, a musician in residence at Moffitt Cancer Center in Tampa, FL. The site features a dedicated blog and an extensive portfolio to highlight Goldstein's rich history of work. The project aimed to provide a comprehensive platform for showcasing his musical achievements and sharing insights through his blog.
+[Lowry Creative](https://lowrycreative.com) designed and developed a website for Lloyd Goldstein, a musician in residence at Moffitt Cancer Center in Tampa, FL. The site features a dedicated blog and an extensive portfolio to highlight Goldstein's rich history of work. The project aimed to provide a comprehensive platform for showcasing his musical achievements and sharing insights through his blog.
 
 ### My Role
 
