--- a/src/content/projects/meta-your-personal-main-street.mdx
+++ b/src/content/projects/meta-your-personal-main-street.mdx
@@ -22,7 +22,7 @@ Javascript, Vue.js, Three.js, Sass
 
 ### Summary
 
-Triptych's Meta Main Street project, sponsored by The Atlantic, explored the intersection of virtual reality and commerce, reimagining the traditional shopping experience by blending an immersive digital environment with retail. The project creates a new, interactive way for brands and consumers to connect in a virtual space. Meta Main Street offers small businesses digital storefronts that replicate the communal aspects of in-person shopping, offering a seamless, innovative approach to e-commerce in the metaverse.
+[Triptych's](https://triptych.co) Meta Main Street project, sponsored by [The Atlantic](https://www.theatlantic.com/rethink/), explored the intersection of virtual reality and commerce, reimagining the traditional shopping experience by blending an immersive digital environment with retail. The project creates a new, interactive way for brands and consumers to connect in a virtual space. Meta Main Street offers small businesses digital storefronts that replicate the communal aspects of in-person shopping, offering a seamless, innovative approach to e-commerce in the metaverse.
 
 ### My Role
 
