--- a/src/content/projects/qgiv.mdx
+++ b/src/content/projects/qgiv.mdx
@@ -22,7 +22,7 @@ React, Redux, webpack, Sass, PHP
 
 ### Summary
 
-Qgiv redesigned their donation forms to meet evolving UI/UX standards, offer an improved user experience, and increase conversion rates.. The redesigned forms feature enhanced customization options, a mobile-first responsive design, and built-in tools that simplify the donation process for users. These updates not only streamline giving but also provide nonprofits with valuable insights and flexibility to create a more personalized donor experience.
+[Qgiv](https://www.qgiv.com) redesigned their donation forms to meet evolving UI/UX standards, offer an improved user experience, and increase conversion rates.. The redesigned forms feature enhanced customization options, a mobile-first responsive design, and built-in tools that simplify the donation process for users. These updates not only streamline giving but also provide nonprofits with valuable insights and flexibility to create a more personalized donor experience.
 
 ### My Role
 
