--- a/src/content/projects/robin-knows.mdx
+++ b/src/content/projects/robin-knows.mdx
@@ -22,7 +22,7 @@ Typescript, React Native, Expo, Websockets, Tailwind/Nativewind, Nestjs, Eslint
 
 ### Summary
 
-Triptych developed Robin Knows, an AI-powered app designed to offer on-demand technology support and scam prevention. Available 24/7, Robin Knows assists users with troubleshooting devices and identifying potential scams, providing clear, step-by-step guidance tailored to their experience level. The app simplifies technology support and scam detection with a straightforward setup process and a free trial, allowing users to explore its features without any commitment.
+[Triptych](https://triptych.co) developed [Robin Knows](https://www.robinknows.app), an AI-powered app designed to offer on-demand technology support and scam prevention. Available 24/7, Robin Knows assists users with troubleshooting devices and identifying potential scams, providing clear, step-by-step guidance tailored to their experience level. The app simplifies technology support and scam detection with a straightforward setup process and a free trial, allowing users to explore its features without any commitment.
 
 ### My Role
 
