--- a/src/content/projects/triptych.mdx
+++ b/src/content/projects/triptych.mdx
@@ -22,7 +22,7 @@ Webflow, Typescript, React, Next.js, Three.js, GLSL, CSS, AWS S3, AWS Route 53, 
 
 ### Summary
 
-Triptych recently completed a project to rebuild the company's website using a modern tech stack. This effort resulted in a highly interactive site with dynamic 3D animations enhancing user interaction. The redesigned website was recognized as a Muzli Pick, acknowledging its outstanding contribution to the design community and underscoring Triptych's dedication to innovative web design.
+[Triptych](https://triptych.co) recently completed a project to rebuild the company's website using a modern tech stack. This effort resulted in a highly interactive site with dynamic 3D animations enhancing user interaction. The redesigned website was recognized as a Muzli Pick, acknowledging its outstanding contribution to the design community and underscoring Triptych's dedication to innovative web design.
 
 ### My Role
 
