--- a/src/content/projects/wind-river.mdx
+++ b/src/content/projects/wind-river.mdx
@@ -22,7 +22,7 @@ Webflow, React, React Three Fiber, PixiJS, Three.js, Sass, Vite, AWS S3, AWS Rou
 
 ### Summary
 
-Triptych created a high-fidelity 3D interactive map for Wind River Built, a modular home builder, to showcase their capabilities to developers, architects, realtors, and designers. The map features a sweeping landscape with various structure types, allowing users to explore specific neighborhoods, view site plans, and experience immersive 3D house models. With intuitive navigation and multiple zoom levels, users can easily visualize the potential of Wind River's offerings. This interactive experience not only highlights Wind River's versatility but also inspires and motivates prospective clients to engage with the company.
+[Triptych](https://triptych.co) created a high-fidelity 3D interactive map for [Wind River Built](https://www.windriverbuilt.com), a modular home builder, to showcase their capabilities to developers, architects, realtors, and designers. The map features a sweeping landscape with various structure types, allowing users to explore specific neighborhoods, view site plans, and experience immersive 3D house models. With intuitive navigation and multiple zoom levels, users can easily visualize the potential of Wind River's offerings. This interactive experience not only highlights Wind River's versatility but also inspires and motivates prospective clients to engage with the company.
 
 ### My Role
 
