--- a/src/content/pages/home/index.mdx
+++ b/src/content/pages/home/index.mdx
@@ -14,7 +14,7 @@ Thanks for dropping by!
 
 I'm Mario, a Creative Developer with a passion for crafting exceptional user experiences.
 
-If you have sec, check out <OpenMenuButton><span className="link">my projects</span></OpenMenuButton>. Like what you see? <AnchorLink href="#footer">Drop me a line</AnchorLink>!
+If you have sec, check out <OpenMenuButton><span className="link" data-external>my projects</span></OpenMenuButton>. Like what you see? <AnchorLink href="#footer" data-external>Drop me a line</AnchorLink>!
 
 </Container>
 </div>
