--- a/src/content/projects/rodda-construction.mdx
+++ b/src/content/projects/rodda-construction.mdx
@@ -22,7 +22,7 @@ Squarespace, jQuery, ES6, LESS, webpack
 
 ### Summary
 
-Lowry Creative undertook the redesign of Rodda Construction's website to better showcase the company's portfolio of building projects and provide a centralized feed for press releases and news articles. The project involved creating a custom design that avoided pre-built templates, ensuring a unique and tailored appearance.
+[Lowry Creative](https://lowrycreative.com) undertook the redesign of Rodda Construction's website to better showcase the company's portfolio of building projects and provide a centralized feed for press releases and news articles. The project involved creating a custom design that avoided pre-built templates, ensuring a unique and tailored appearance.
 
 ### My Role
 
